plugins {
    id 'idea'
    id 'eclipse'
    id 'java'
    id 'org.springframework.boot' version '2.3.1.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id "com.github.ben-manes.versions" version "0.28.0"
    id 'se.patrikerdes.use-latest-versions' version '0.2.13'
    id 'maven-publish'
}

allprojects {

    group = 'com.idea.shower'
    version = '1.0.0-M1'
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'

    repositories {
        maven { url 'https://maven.aliyun.com/repository/public/' }
        mavenLocal()
        mavenCentral()
    }


    apply plugin: 'idea'
    apply plugin: 'eclipse'
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.github.ben-manes.versions'
    apply plugin: 'se.patrikerdes.use-latest-versions'
    apply plugin: 'maven-publish'

    configurations {
        developmentOnly
        runtimeClasspath {
            extendsFrom developmentOnly
        }
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compile group: 'org.mapstruct', name: 'mapstruct', version: '1.3.1.Final'
        compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
        compile group: 'cn.hutool', name: 'hutool-all', version: '5.3.5'
        implementation 'org.springframework.boot:spring-boot-starter'
//        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
        compileOnly 'org.projectlombok:lombok'
        compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        }
        compile group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
    }

    test {
        useJUnitPlatform()
    }

    bootJar {
        enabled = true
        classifier = "application"
    }

    jar {
        enabled = true
    }

}

bootJar {
    enabled = false
}
jar {
    enabled = false
}
